--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
+.main {
   text-align: center;
+  background: linear-gradient(45deg, #43a9f3, #dc53ad, #a59fde);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main h1 {
+  margin-top: 0;
+  padding-top: 2rem;
+  margin-bottom: 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.img-poster {
+  height: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.poster-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  margin: 0 1rem 0 1rem;
 }
