--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .main {
   text-align: center;
   background: linear-gradient(45deg, #43a9f3, #dc53ad, #a59fde);
+  height: 100vh;
+  width: fit-content;
 }
 
 .main h1 {
