--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .main {
   text-align: center;
   background: linear-gradient(45deg, #43a9f3, #dc53ad, #a59fde);
-  height: 100%;
-  width: fit-content;
+  height: 100vh;
 }
 
 .main h1 {
