--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
+body {
+  background: linear-gradient(45deg, #43a9f3, #dc53ad, #a59fde);
+  min-height: 100vh;
+}
+
 .main {
   text-align: center;
-  background: linear-gradient(45deg, #43a9f3, #dc53ad, #a59fde);
-  height: max-content;
 }
 
 .main h1 {
   margin-top: 0;
   padding-top: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .img-poster {
@@ -18,4 +21,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   margin: 0 1rem 0 1rem;
+}
+
+.main h3 {
+  margin-bottom: 2rem;
 }
