--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   background: linear-gradient(45deg, #43a9f3, #dc53ad, #a59fde);
   min-height: 100vh;
+  /* min-width: 100vh; */
 }
 
 .main {
@@ -25,4 +26,10 @@ body {
 
 .main h3 {
   margin-bottom: 2rem;
+}
+
+@media (max-width: 750px) {
+  .poster-container {
+    grid-template-columns: 1fr 1fr 1fr; 
+  }
 }
